# opam2json

./: .gitignore  LICENSE  Makefile  README.md  flake.nix  opam2json.install  opam2json.nix  opam2json.opam
src/: opam2json.ml
